Fix README.md location

--- a/jsc-sys/Cargo.toml
+++ b/jsc-sys/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
 links = "JavaScriptCore"
 build = "build.rs"
 license = "BSD"
-readme = "jsc-sys/README.md"
+readme = "README.md"
 homepage = "https://github.com/Constellation/rust-jsc"
 repository = "https://github.com/Constellation/rust-jsc.git"
 description = "WebKit JavaScriptCore bundle"
