Note it as BSD-2-Clause

--- a/jsc-sys/Cargo.toml
+++ b/jsc-sys/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
 links = "JavaScriptCore"
 build = "build.rs"
-license = "BSD"
+license = "BSD-2-Clause"
 readme = "README.md"
 homepage = "https://github.com/Constellation/rust-jsc"
 repository = "https://github.com/Constellation/rust-jsc.git"
