Add more ignores

--- a/jsc-sys/Cargo.toml
+++ b/jsc-sys/Cargo.toml
@@ -19,6 +19,7 @@ exclude = [
     "WebKit/Source/WebKit2/*",
     "WebKit/Source/JavaScriptCore/tests/*",
     "WebKit/WebKitBuild/*",
+    "WebKit/WebKitLibraries/*",
     "WebKit/Websites/*",
 ]
 
