--- a/jsc-sys/Cargo.toml
+++ b/jsc-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "jsc-sys"
-version = "0.1.0"
+version = "0.1.2+r201969"
 authors = ["Yusuke Suzuki <utatane.tea@gmail.com>"]
 links = "JavaScriptCore"
 build = "build.rs"
@@ -14,10 +14,25 @@ exclude = [
     "WebKit/LayoutTests/*",
     "WebKit/ManualTests/*",
     "WebKit/PerformanceTests/*",
+    "WebKit/Source/JavaScriptCore/tests/*",
+    "WebKit/Source/ThirdParty/ANGLE",
+    "WebKit/Source/ThirdParty/brotli",
+    "WebKit/Source/ThirdParty/qunit",
+    "WebKit/Source/ThirdParty/woff2",
     "WebKit/Source/WebCore/*",
     "WebKit/Source/WebKit/*",
     "WebKit/Source/WebKit2/*",
-    "WebKit/Source/JavaScriptCore/tests/*",
+    "WebKit/Source/WebInspectorUI/*",
+    "WebKit/**/ChangeLog*",
+    "WebKit/**/*xcodeproj/*",
+    "WebKit/Tools/WebKitTestRunner/*",
+    "WebKit/Tools/WebKitLauncher/*",
+    "WebKit/Tools/BuildSlaveSupport/*",
+    "WebKit/Tools/MiniBrowser/*",
+    "WebKit/Tools/TestResultServer/*",
+    "WebKit/Tools/DumpRenderTree/*",
+    "WebKit/Tools/iExploder/*",
+    "WebKit/Tools/CygwinDownloader/*",
     "WebKit/WebKitBuild/*",
     "WebKit/WebKitLibraries/*",
     "WebKit/Websites/*",
